scripts/local_kubernetes_cluster/resources/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: hello-world
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`hello.example.com`)
      kind: Rule
      services:
        - name: hello
          port: 80
